Renamed project "TwoTrack" and Started some TDD.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Railcar\Railcar.csproj" />
+    <ProjectReference Include="..\TwoTrack\TwoTrack.csproj" />
   </ItemGroup>
 
 </Project>
