Introduce TtError and ErrorLevel

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwoTrack\TwoTrack.csproj" />
+    <ProjectReference Include="..\TwoTrack\TwoTrackResult.csproj" />
   </ItemGroup>
 
 </Project>
