Introduce TtResult<T>. Implement Fail<T> methods.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\TwoTrack\TwoTrackResult.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TtResultGenericTests\" />
+  </ItemGroup>
+
 </Project>
