Major refactoring. Moved Extensions to own project and reworked TwoTrack core functions.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TwoTrackAspExtensions\TwoTrackAspExtensions.csproj" />
     <ProjectReference Include="..\TwoTrack\TwoTrackResult.csproj" />
   </ItemGroup>
 
