--- a/TwoTrackAspExtensions/TwoTrackAspExtensions.csproj
+++ b/TwoTrackAspExtensions/TwoTrackAspExtensions.csproj
@@ -1,16 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwoTrackAspExtensions\TwoTrackAspExtensions.csproj" />
     <ProjectReference Include="..\TwoTrack\TwoTrackResult.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
 </Project>
