Make it possible to set exception filter before executing funcs or actions.

--- a/TwoTrackUseCaseScenarioTests/TwoTrackUseCaseScenarioTests.csproj
+++ b/TwoTrackUseCaseScenarioTests/TwoTrackUseCaseScenarioTests.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DemoWebApp\DemoWebApp.csproj" />
     <ProjectReference Include="..\TwoTrackCore\TwoTrackCore.csproj" />
+    <ProjectReference Include="..\TwoTrackExtensions\TwoTrackExtensions.csproj" />
   </ItemGroup>
 
 </Project>
